# ClawdbotHarmony

./: .gitignore  CHANGELOG.json  README.md  VERIFICATION_TESTS.md  build-profile.json5  build.bat  build_direct.bat  build_fix.bat  crop_icons.py  debug_build.bat  linda_build.bat  linda_build2.bat  oh-package.json5  sync_version.sh
AppScope/: app.json5
docs/: EMBEDDING_RESEARCH.md  OPENCLAW_MEMORY_RESEARCH.md  REMOTE_DEBUG_RESEARCH.md  SILENT_MODE_DESIGN.md  VOICEPRINT_DESIGN.md  context-intelligence-phases.md  context_awareness_design.md  digital_world_api_research.md  ~$情景智能框架设计_v3.pptx  情景智能框架设计_v3.pptx  情景智能框架设计_v3_场景版.pptx
entry/: oh-package-lock.json5  oh-package.json5
entry/src/main/cpp/: CMakeLists.txt  napi_exec.cpp
entry/src/main/cpp/context_engine/: CMakeLists.txt  context_engine.h  context_engine_napi.cpp  decision_tree.cpp  mab.cpp  rule_engine.cpp  soft_match.cpp
entry/src/main/cpp/data_tray/: data_tray.h
entry/src/main/cpp/motion_detector/: motion_detector.h  sampling_strategy.h
entry/src/main/cpp/place_learner/: place_signal_learner.h
entry/src/main/cpp/types/libcontext_engine/: index.d.ts  oh-package.json5
entry/src/main/cpp/types/libexec/: index.d.ts  oh-package.json5
entry/src/main/cpp/types/libvoiceprint/: index.d.ts
entry/src/main/cpp/voiceprint/: voiceprint_napi.cpp
scripts/: check_case.bat  check_hvigor.bat  check_path.bat  check_pyautogui.py  check_realpath.bat  check_util.bat  check_util2.bat  download_sherpa_onnx.sh  fix_case.bat
signing/: debug.cer  debug.p12  debug.p7b  (+3 more)
tests/: TEST_PLAN.md
tools/: export_model.py
(+139 files in other folders)
